--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prepare": "npm install react-scripts chart.js react-chartjs-2 gh-pages",
+    "prepare": "npm install react-scripts chart.js react-chartjs-2 gh-pages @material-ui/core axios",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
