--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "chart.js": "^3.9.1",
+    "html2canvas": "^1.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prepare": "npm install react-scripts chart.js react-chartjs-2 gh-pages @material-ui/core axios",
+    "prepare": "npm install react-scripts chart.js react-chartjs-2 gh-pages @material-ui/core axios react-modal html2canvas",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
