--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prepare": "npm install react-scripts chart.js react-chartjs-2 gh-pages @material-ui/core axios html2canvas react-modal jspdf",
+    "prepare": "npm install react-scripts gh-pages @material-ui/core axios react-modal react-to-print",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
