--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.rpa'
+    namespace 'com.webview.ai_voca'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.rpa"
+        applicationId "com.webview.ai_voca"
         minSdk 26
         targetSdk 32
         versionCode 1
