--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,8 +27,8 @@
      "density": "2.0"
     }
   ],
-  "start_url": "/",
-  "display": "fullscreen",
+  "start_url": "/?standalone=true",
+  "display": "standalone"
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
