--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,7 @@
 {
+  "manifest_version": 2,
+ "display": "fullscreen",
+ "start_url": "/ai_voca/?fullscreen=true",
   "short_name": "AI Voca",
   "name": "AI족집게 수능영단어",
   "icons": [
@@ -27,8 +30,6 @@
      "density": "2.0"
     }
   ],
-  "start_url": "/?standalone=true",
-  "display": "standalone"
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
