--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "react-app",
-  "version": "0.1.1",
+  "name": "temp",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.4",
+    "@mui/styled-engine": "^5.11.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "chart.js": "^3.9.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "^17.0.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-modal": "^3.13.1",
+    "axios": "^1.2.2",
+    "gh-pages": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-to-print": "^2.14.11",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "prepare": "npm install react-scripts gh-pages @material-ui/core axios react-modal react-to-print",
+    "deploy": "gh-pages -d build",
+    "prepare": "npm install typescript @types/node @types/react @types/react-dom @types/jest react-scripts axios gh-pages @mui/material @mui/styled-engine @emotion/react @emotion/styled @types/react-modal react-to-print",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "commit": "git add .; git commit -m '.'; git push origin master;"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,9 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://needleworm.github.io"
+  }
 }
