--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,34 @@
 {
-  "manifest_version": 2,
- "display": "fullscreen",
- "start_url": "/ai_voca/?fullscreen=true",
-  "short_name": "Ban's",
-  "name": "Byunghyun Ban's Page",
+  "short_name": "AI Voca",
+  "name": "AI족집게 수능영단어",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+     "src": "favicons/android-icon-192x192.png",
+     "sizes": "192x192",
+     "type": "image/png",
+     "density": "4.0",
+     "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+     "src": "favicons/android-icon-144x144.png",
+     "sizes": "144x144",
+     "type": "image/png",
+     "density": "3.0"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+     "src": "favicons/android-icon-96x96.png",
+     "sizes": "96x96",
+     "type": "image/png",
+     "density": "2.0"
     }
   ],
+  "start_url": "/",
+  "display": "fullscreen",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
