--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "temp",
-  "version": "0.1.0",
+  "name": "AI Voca",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
