--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AI Voca",
+  "name": "ai_voca",
   "version": "1.0.0",
   "private": true,
   "homepage": "./",
@@ -19,6 +19,7 @@
     "axios": "^1.2.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
