--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-modal": "^3.13.1",
     "axios": "^1.2.2",
+    "chart.js": "^4.1.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countdown-circle-timer": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -29,7 +31,7 @@
   },
   "scripts": {
     "deploy": "gh-pages -d build",
-    "prepare": "npm install typescript @types/node @types/react @types/react-dom @types/jest react-scripts axios gh-pages @mui/material @mui/styled-engine @emotion/react @emotion/styled @types/react-modal react-to-print",
+    "prepare": "npm install typescript @types/node @types/react @types/react-dom @types/jest react-scripts axios gh-pages @mui/material @mui/styled-engine @emotion/react @emotion/styled @types/react-modal react-to-print chart.js react-chartjs-2",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
